--- a/public/stylesheets/output.css
+++ b/public/stylesheets/output.css
@@ -590,10 +590,6 @@ video {
   position: relative;
 }
 
-.bottom-0 {
-  bottom: 0px;
-}
-
 .bottom-\[15px\] {
   bottom: 15px;
 }
@@ -604,10 +600,6 @@ video {
 
 .left-0 {
   left: 0px;
-}
-
-.right-0 {
-  right: 0px;
 }
 
 .right-5 {
@@ -642,10 +634,6 @@ video {
   z-index: 10;
 }
 
-.z-20 {
-  z-index: 20;
-}
-
 .float-left {
   float: left;
 }
@@ -675,6 +663,11 @@ video {
   margin-right: auto;
 }
 
+.my-20 {
+  margin-top: 5rem;
+  margin-bottom: 5rem;
+}
+
 .my-3 {
   margin-top: 0.75rem;
   margin-bottom: 0.75rem;
@@ -702,10 +695,6 @@ video {
 
 .hidden {
   display: none;
-}
-
-.h-5 {
-  height: 1.25rem;
 }
 
 .h-8 {
@@ -941,6 +930,11 @@ video {
   background-color: rgb(245 245 245 / var(--tw-bg-opacity));
 }
 
+.bg-orange {
+  --tw-bg-opacity: 1;
+  background-color: rgb(252 106 14 / var(--tw-bg-opacity));
+}
+
 .bg-pone {
   --tw-bg-opacity: 1;
   background-color: rgb(33 19 34 / var(--tw-bg-opacity));
@@ -956,17 +950,16 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
-.bg-orange {
-  --tw-bg-opacity: 1;
-  background-color: rgb(252 106 14 / var(--tw-bg-opacity));
-}
-
 .p-10 {
   padding: 2.5rem;
 }
 
 .p-2 {
   padding: 0.5rem;
+}
+
+.p-20 {
+  padding: 5rem;
 }
 
 .p-4 {
@@ -1293,6 +1286,15 @@ form textarea:focus {
   cursor: pointer;
 }
 
+#error-container {
+  color: black;
+  font-weight: bold;
+}
+
+#error-container li {
+  list-style: disc;
+}
+
 /* i think i need these */
 
 /* book review form */
@@ -1315,7 +1317,7 @@ form textarea:focus {
 
 .tags-input li {
   display: inline-block;
-  background-color: var(--light-purple);
+  background-color: var(--orange);
   color: white;
   border-radius: 20px;
   padding: 5px 10px;
@@ -1327,7 +1329,7 @@ form textarea:focus {
   outline: none;
   padding: 5px;
   font-size: 14px;
-  border: 2px solid var(--light-purple);
+  border: 2px solid var(--orange);
   border-radius: 8px;
 }
 
@@ -1348,13 +1350,6 @@ form textarea:focus {
 
 .no-opacity {
   opacity: 0;
-}
-
-#error-msg,
-#error-container {
-  opacity: 0;
-  font-weight: bold;
-  color: white;
 }
 
 #success-container {
